Add navigation nav-belt

--- a/index.html
+++ b/index.html
@@ -15,8 +15,94 @@
   <a id="banner" href="#"></a>
   <!-- Main body -->
 
+  <header>
+    <div id="nav-belt">
+      <div class="nav-left">
+        <div id="nav-logo">
+          <a href="#" class="nav-logo-link"></a>
+          <a href="#" class="nav-logo-tagline">Try Prime</a>
+        </div>
+      </div>
+      <div class="nav-right">
+        <div id="nav-holiday">
+          <a href="#"></a>
+        </div>
+      </div>
+      <div class="nav-fill">
+        <div id="nav-search">
+          <form>
+            <div class="nav-left">
+              <span class="nav-search-label">All</span>
+              <i class="fa fa-caret-down" aria-hidden="true"></i>
+              <select id="nav-search-select">
+                <option selected="selected" value="aps">All Departments</option>
+                <option value="alexa-skills">Alexa Skills</option>
+                <option value="instant-video">Amazon Video</option>
+                <option value="warehouse-deals">Amazon Warehouse Deals</option>
+                <option value="appliances">Appliances</option>
+                <option value="mobile-apps">Apps &amp; Games</option>
+                <option value="arts-crafts">Arts, Crafts &amp; Sewing</option>
+                <option value="automotive">Automotive Parts &amp; Accessories</option>
+                <option value="baby-products">Baby</option>
+                <option value="beauty">Beauty &amp; Personal Care</option>
+                <option value="stripbooks">Books</option>
+                <option value="popular">CDs &amp; Vinyl</option>
+                <option value="mobile">Cell Phones &amp; Accessories</option>
+                <option value="fashion">Clothing, Shoes &amp; Jewelry</option>
+                <option value="fashion-womens">&nbsp;&nbsp;&nbsp;Women</option>
+                <option value="fashion-mens">&nbsp;&nbsp;&nbsp;Men</option>
+                <option value="fashion-girls">&nbsp;&nbsp;&nbsp;Girls</option>
+                <option value="fashion-boys">&nbsp;&nbsp;&nbsp;Boys</option>
+                <option value="fashion-baby">&nbsp;&nbsp;&nbsp;Baby</option>
+                <option value="collectibles">Collectibles &amp; Fine Art</option>
+                <option value="computers">Computers</option>
+                <option value="courses">Courses</option>
+                <option value="financial">Credit and Payment Cards</option>
+                <option value="digital-music">Digital Music</option>
+                <option value="electronics">Electronics</option>
+                <option value="gift-cards">Gift Cards</option>
+                <option value="grocery">Grocery &amp; Gourmet Food</option>
+                <option value="handmade">Handmade</option>
+                <option value="hpc">Health, Household &amp; Baby Care</option>
+                <option value="local-services">Home &amp; Business Services</option>
+                <option value="garden">Home &amp; Kitchen</option>
+                <option value="industrial">Industrial &amp; Scientific</option>
+                <option value="digital-text">Kindle Store</option>
+                <option value="fashion-luggage">Luggage &amp; Travel Gear</option>
+                <option value="luxury-beauty">Luxury Beauty</option>
+                <option value="magazines">Magazine Subscriptions</option>
+                <option value="movies-tv">Movies &amp; TV</option>
+                <option value="mi">Musical Instruments</option>
+                <option value="office-products">Office Products</option>
+                <option value="lawngarden">Patio, Lawn &amp; Garden</option>
+                <option value="pets">Pet Supplies</option>
+                <option value="prime-exclusive">Prime Exclusive</option>
+                <option value="pantry">Prime Pantry</option>
+                <option value="software">Software</option>
+                <option value="sporting">Sports &amp; Outdoors</option>
+                <option value="tools">Tools &amp; Home Improvement</option>
+                <option value="toys-and-games">Toys &amp; Games</option>
+                <option value="vehicles">Vehicles</option>
+                <option value="videogames">Video Games</option>
+                <option value="wine">Wine</option>
+              </select>
+            </div>
+            <div class="nav-right">
+              <i class="fa fa-search" aria-hidden="true"></i>
+              <input type="submit">
+            </div>
+            <div class="nav-fill">
+              <input type="text" autocomplete="off">
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </header>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
