Add navigation nav-main

--- a/index.html
+++ b/index.html
@@ -98,6 +98,53 @@
         </div>
       </div>
     </div>
+
+    <nav id="nav-main">
+      <div class="nav-left">
+        <div class="nav-shop">
+          <a class="nav-a" href="#">
+            Departments
+            <i class="fa fa-caret-down" aria-hidden="true"></i>
+          </a>
+        </div>
+      </div>
+      <div class="nav-right">
+        <a class="nav-a" href="#">
+          <span>EN</span>
+          <i class="fa fa-globe" aria-hidden="true"></i>
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+        </a>
+
+        <a class="nav-a" href="#">
+          <span>Hello. Sign in</span>
+          Accounts &amp; Lists
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+        </a>
+
+        <a class="nav-a" href="#">
+          Orders
+        </a>
+
+        <a class="nav-a" href="#">
+          Try Prime
+          <i class="fa fa-caret-down" aria-hidden="true"></i>
+        </a>
+
+        <a class="nav-a cart" href="#">
+          <span>0</span>
+          Cart
+        </a>
+      </div>
+      <div class="nav-fill">
+        <ul>
+          <li><a href="#">Your Amazon.com</a></li>
+          <li><a href="#">Today's Deals</a></li>
+          <li><a href="#">Gift Cards &amp; Registry</a></li>
+          <li><a href="#">Sell</a></li>
+          <li><a href="#">Help</a></li>
+        </ul>
+      </div>
+    </nav>
   </header>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
