--- a/index.html
+++ b/index.html
@@ -147,6 +147,50 @@
     </nav>
   </header>
 
+  <section id="promo">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div id="promo-carousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="img/slide_1.jpg">
+              </div>
+              <div class="item">
+                <img src="img/slide_2.jpg">
+              </div>
+              <div class="item">
+                <img src="img/slide_3.jpg">
+              </div>
+              <div class="item">
+                <img src="img/slide_4.jpg">
+              </div>
+              <div class="item">
+                <img src="img/slide_5.jpg">
+              </div>
+              <div class="item">
+                <img src="img/slide_6.jpg">
+              </div>
+              <div class="item">
+                <img src="img/slide_7.jpg">
+              </div>
+            </div>
+
+            <!-- Controls -->
+            <a class="left carousel-control" href="#promo-carousel" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#promo-carousel" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
