Add featured products

--- a/index.html
+++ b/index.html
@@ -191,6 +191,75 @@
     </div>
   </section>
 
+  <section id="products">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="col-lg-3">
+            <div class="col text-center" id="welcome">
+              <h2>Welcome</h2>
+              <p>Sign in for the best experience</p>
+              <button class="btn">Sign in securely</button>
+              <div class="footer">
+                New to Amazon? <a href="#">Start here</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="col" id="amazon-basics">
+              <h2>Explore AmazonBasics</h2>
+              <a href="#" class="thumbnail text-center">
+                <img src="img/product_1.jpg" alt="Product 1">
+                <span class="caption">Home</span>
+              </a>
+              <a href="#" class="thumbnail text-center">
+                <img src="img/product_2.jpg" alt="Product 2">
+                <span class="caption">Bluetooth</span>
+              </a>
+              <a href="#" class="thumbnail text-center">
+                <img src="img/product_3.jpg" alt="Product 3">
+                <span class="caption">Pets</span>
+              </a>
+              <a href="#" class="thumbnail text-center">
+                <img src="img/product_4.jpg" alt="Product 4">
+                <span class="caption">Computer</span>
+              </a>
+              <div class="footer">
+                <a href="#">Shop all AmazonBasics</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div class="col" id="dress">
+              <h2>The dress shop</h2>
+              <div class="row text-center">
+                <a href="#"><img src="img/dress.png"></a>
+              </div>
+
+              <div class="footer">
+                <a href="#">Shop women's dresses</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-3">
+            <div>
+              <a href="#"><img src="img/product_5.jpg" alt="Product 5"></a>
+            </div>
+            <div class="col" id="deal-day">
+              <h2>Deal of the day</h2>
+              <h3>$163.99</h3>
+              <small>List: <s>$425.00</s> (47% off)</small>
+              <a href="#"><img src="img/product_6.jpg" alt="Product 6"></a>
+              <div class="footer">
+                <a href="#">Shop all deals</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
   <script src="js/app.js"></script>
