--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <!-- Main body -->
 
   <header>
+    <a id="nav-top"></a>
+
     <div id="nav-belt">
       <div class="nav-left">
         <div id="nav-logo">
@@ -259,6 +261,12 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    <div class="top text-center">
+      <a href="#nav-top">Back to top</a>
+    </div>
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
