--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
           <li><a href="#">Your Amazon.com</a></li>
           <li><a href="#">Today's Deals</a></li>
           <li><a href="#">Gift Cards &amp; Registry</a></li>
-          <li><a href="#">Sell</a></li>
+          <li><a href="#">Become A Seller</a></li>
           <li><a href="#">Help</a></li>
         </ul>
       </div>
@@ -253,7 +253,7 @@
               <small>List: <s>$425.00</s> (47% off)</small>
               <a href="#"><img src="img/product_6.jpg" alt="Product 6"></a>
               <div class="footer">
-                <a href="#">Shop all deals</a>
+                <a href="#">See all deals</a>
               </div>
             </div>
           </div>
