Updated some visual and gramatical errors

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css"/>
+  <title>Amazon Clone</title>
 </head>
 
 <body>
@@ -301,7 +302,7 @@
         </ul>
         <ul>
           <li><h3>Let Us Help You</h3></li>
-          <li><a href="#">Your Account</a></li>
+          <li><a href="#"><i>Your Account</i></a></li>
           <li><a href="#">Your Orders</a></li>
           <li><a href="#">Shipping Rates &amp; Policies</a></li>
           <li><a href="#">Amazon Prime</a></li>
